# SACK

./: .gitignore  README.md
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Clock/Clock/: CMakeLists.txt  sdkconfig
Clock/Clock/components/BLE/: BLE.c  CMakeLists.txt
Clock/Clock/components/BLE/include/: BLE.h
Clock/Clock/components/Button/: Button.c  CMakeLists.txt
Clock/Clock/components/Button/include/: Button.h
Clock/Clock/components/Buzzer/: Buzzer.c  CMakeLists.txt
Clock/Clock/components/Buzzer/include/: Buzzer.h
Clock/Clock/components/InternalRealTimeClock/: CMakeLists.txt  InternalRealTimeClock.c
Clock/Clock/components/LCD/: CMakeLists.txt  LCD.c
Clock/Clock/components/RealTimeClock/: CMakeLists.txt  RealTimeClock.c
Clock/Clock/components/SlideSwitch/: CMakeLists.txt  SlideSwitch.c
Clock/Clock/components/Wifi/: CMakeLists.txt  Wifi.c
Clock/Clock/components/bulb/: CMakeLists.txt  bulb.c
Clock/Clock/main/: CMakeLists.txt  main.c
Watch/Watch/: CMakeLists.txt  prj.conf
Watch/Watch/src/: main.c
Watch/Watch/src/Component/Accelerometer/: accelerometer.c  accelerometer.h
Watch/Watch/src/Component/BLE/: ble.c  ble.h
Watch/Watch/src/Component/Battery/: battery.c  battery.h
Watch/Watch/src/Component/Button/: button.c  button.h
Watch/Watch/src/Component/ECG/: ecg.c  ecg.h
Watch/Watch/src/Component/RGB/: rgb.c  rgb.h
docs/: Expressif IDF Setup.docx  Installing Flutter for Mobile Development Prerequisites Git.docx  Renode Emulator.docx  Seggers Embedded Studio IDE Setup.docx  VS Code Setup.docx
(+37 files in other folders)
